--- a/Road to Recovery/pages/Irrelevant/viewServices.html
+++ b/Road to Recovery/pages/Irrelevant/viewServices.html
@@ -492,7 +492,7 @@
             <!-- end content -->
             <!-- FOOTER -->
             <footer class="footer text-right">
-                2016 © KSmoving Management System Powered by Neta Reuveni, Hanan Ben Shitrit, Sharon Krepner
+                2018 © Road to Recovery Management System by Matan Doron
             </footer>
             <!-- End FOOTER -->
         </div>
