--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -206,7 +206,7 @@
                                 });
 
                                 setTimeout(function () {
-                                    location.href = "index.html";
+                                    location.href = "viewRidePats.html";
                                 }, 1001);
                                 GENERAL.USER.setUserName(userName);
                                // getUserType(userName);
