--- a/Road to Recovery/pages/escortedForm.html
+++ b/Road to Recovery/pages/escortedForm.html
@@ -480,7 +480,7 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-3 control-label">שם פרטי</label>
+                                                    <label class="col-sm-3 control-label">שם פרטי<span style="color:red;">&nbsp;*</span></label>
                                                     <div class="col-sm-6">
                                                         <input id="escortedFirstName" name="escortedFirstName" type="text" class="form-control">
                                                     </div>
